--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,14 +29,16 @@
         </include>
     </coverage>
 
-    <listeners>
-        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
-    </listeners>
 
     <!-- Run `composer require symfony/panther` before enabling this extension -->
     <!--
-    <extensions>
+       <extensions>
         <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
     -->
+    
+   <extensions>
+        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+    </extensions>
+    
 </phpunit>
