Mission 3 : Tâche 2 : créer la documentation technique

--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/mediatekformation"
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+KEYCLOAK_SECRET=IoU26b59QUXCVf73oxLuPGKwTMFqkh3P
+KEYCLOAK_CLIENTID=adminID
+KEYCLOAK_APP_URL=http://localhost:8080/
