--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
           server: 'mediatekformation.online' 
           server-dir: /public_html/
           username: 'u695746505.mediatekformation' 
-          password: ${{ secrets.ftp_SECRET }}
+          password: ${{ secrets.ftp_PASSWORD }}
